# MIDIMischief

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DELTAS.md  LICENSE  README.md  midimap.spec  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: package.yml
packaging/: launcher.py
packaging/linux/: MIDIMischief.desktop  build_appimage.sh
packaging/macos/: create_dmg.sh  sign_and_notarize.sh
packaging/windows/: MIDIMischief.nsi
src/midimap/: __init__.py  __main__.py  app.py  autostart.py  event_bus.py  events.py  logging_setup.py
src/midimap/actions/: __init__.py  builtin.py  keyboard.py  media.py  plugin.py  script.py  template.py
src/midimap/cli/: __init__.py  diff.py  export_import.py  gui.py  main.py  monitor.py  run.py  validate.py
src/midimap/devices/: __init__.py  descriptors.py  hid_manager.py  hid_normalizer.py  manager.py  midi_normalizer.py
src/midimap/devices/builtin_descriptors/: __init__.py  controller_boards.yaml  descriptors.yaml  gamepads.yaml  macro_pads.yaml  midi_adjacent.yaml
src/midimap/gui/: __init__.py  app.py  main_window.py  qt_bridge.py
src/midimap/gui/dialogs/: __init__.py  bind_control.py  learn_mode.py
src/midimap/gui/tabs/: __init__.py  devices.py  event_log.py  profile_editor.py  settings.py
src/midimap/gui/widgets/: __init__.py  binding_list.py  device_render.py  event_table.py
src/midimap/mapping/: __init__.py  engine.py
src/midimap/plugins/: __init__.py  registry.py
src/midimap/profile/: __init__.py  diff.py  schema.py  store.py  watcher.py
tests/: conftest.py  test_app_end_to_end.py  test_autostart.py  test_builtin.py  test_cli_extras.py  test_device_manager.py  test_device_render.py  test_event_bus.py  test_gui_bind_from_event.py  test_gui_bridge.py  test_gui_dialogs.py  test_gui_event_table.py  test_gui_m5.py  test_gui_m6.py  test_gui_main_window.py  test_hid.py  test_hid_manager.py  test_keyboard_action.py  test_m3_e2e.py  test_mapping_engine.py  test_media.py  test_midi_normalizer.py  test_plugins.py  test_profile_diff.py  test_profile_schema.py  test_profile_store.py  test_profile_watcher.py  test_script_runner.py  test_template.py
tests/fixtures/: bad_profile.json  builtin_hid_reports.yaml  sample_profile.json  sample_profile.yaml
