[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MIDIMischief"
version = "0.1.0"
description = "Cross-platform MIDI/HID controller -> keyboard/script mapper"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Brian Ackerman", email = "bjackerman@gmail.com" }]
keywords = ["midi", "hid", "controller", "mapper", "keyboard", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Utilities",
]
dependencies = [
    "mido>=1.3,<2.0",
    "python-rtmidi>=1.5,<2.0",
]

[project.optional-dependencies]
# Core mapping/output stack (M2+)
runtime = [
    "pynput>=1.7,<2.0",
    "pydantic>=2.5,<3.0",
    "PyYAML>=6.0,<7.0",
]
# GUI (M4+)
gui = [
    "PySide6>=6.5,<7.0",
]
# HID (M6+)
hid = [
    "hidapi>=0.14,<1.0",
]
dev = [
    "pytest>=8.0,<10.0",
    "ruff>=0.5,<1.0",
]
package = [
    "pyinstaller>=6.0,<7.0",
]
all = [
    "pynput>=1.7,<2.0",
    "pydantic>=2.5,<3.0",
    "PyYAML>=6.0,<7.0",
    "PySide6>=6.5,<7.0",
    "hidapi>=0.14,<1.0",
]

[project.scripts]
midimap = "midimap.cli.main:main"

[project.urls]
Homepage = "https://github.com/bjackerman/MIDIMischief"
Issues = "https://github.com/bjackerman/MIDIMischief/issues"
Changelog = "https://github.com/bjackerman/MIDIMischief/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/midimap"]

# Descriptor YAML is runtime package data, not an importable Python module.
[tool.hatch.build.targets.wheel.force-include]
"src/midimap/devices/builtin_descriptors/descriptors.yaml" = "midimap/devices/builtin_descriptors/descriptors.yaml"

# Note: the Python package import name stays `midimap` for ergonomics
# (consistent CLI command, short import). The published project name
# is `MIDIMischief`. This is the same pattern as pip install Pillow
# -> import PIL.

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
